tests/bad/mutual0.tig
let
    type a = b
    type b = c
    type c = a
in
    3
end
